# BasicTV

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONSOLE_HOWTO.txt  Makefile  README.md  TODO_longterm.txt  clean.sh  close.cpp  convert.cpp  convert.h  cryptocurrency.cpp  escape.cpp  fast_build.sh  file.cpp  file.h  gdb.sh  init.cpp  loop.cpp  main.cpp  personal.cfg  settings.cfg  settings.cpp  state.h  thread.cpp  util.cpp  util.h
compress/: compress.cpp  compress_zstd.cpp
console/: console.cpp  console.h  console_id.cpp  console_manager.cpp  console_tv.cpp
docs/: LAYMAN.txt
encrypt/: encrypt.cpp
id/: id.cpp  id.h  id_api.cpp  id_api.h  id_api_transport.h  id_cache.cpp  id_export.cpp  id_import.cpp  id_transport.cpp  id_transport.h  id_transport_data_ptr.cpp  id_transport_data_ptr.h
id/request/: id_request.cpp  (+2 more)
input/: input.cpp
math/: math.h
net/: net.cpp  net.h  net_socket.cpp  net_socket.h  net_stats.cpp
src/: close.cpp  convert.cpp  convert.h  init.cpp  main.cpp  main.h  settings.h  thread.h  util.cpp  util.h
test/: test.cpp  test.h  test_audio.cpp  test_escape.cpp  test_id_system.cpp  test_math.cpp  test_math.h  test_net.cpp
tv/: tv.cpp  tv.h  tv_api.cpp  tv_api.h  tv_audio.cpp  tv_audio.h  tv_audio_mixer.cpp  tv_audio_mixer.h  tv_channel.h  tv_dev.cpp  tv_frame_audio.cpp  tv_frame_audio.h  tv_frame_numerical.cpp  tv_frame_numerical.h  tv_frame_standard.cpp  tv_frame_standard.h  tv_frame_video.cpp  tv_item.cpp  tv_item.h  tv_menu.cpp  tv_meta.cpp  tv_meta.h  tv_prop.cpp  tv_prop.h  tv_video.cpp  tv_video.h  tv_window.cpp  tv_window.h
(+248 files in other folders)
